# snakeGame

./: .build  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  snakeGame
game/: Direction.h  Object.cpp  Object.h  Type.h
game/eatable/: Eatable.cpp  Eatable.h  Fruit.cpp  Fruit.h  Poison.cpp  Poison.h
game/map/: Gate.cpp  Gate.h  ImmuneWall.cpp  ImmuneWall.h  Wall.cpp  Wall.h  map1.txt  map2.txt  map3.txt  map4.txt
game/snake/: SnakeHead.cpp  SnakeHead.h  SnakeTail.cpp  SnakeTail.h
